@@ -30,5 +30,6 @@
 #define CL_DEFAULT_MAXPORTSCAN 1000
 #define CL_DEFAULT_MAXDIRREC 15
 #define CL_DEFAULT_STREAMMAXLEN 10 * 1048576
+#define CL_DEFAULT_IDLETIMEOUT 30
 
 #endif
