@@ -37,8 +37,8 @@ Save the scan report to FILE.
 \fB\-\-log\-verbose\fR
 Save additional messages (mostly useless) to the report file.
 .TP 
-\fB\-\-disable\-summary\fR
-Disable summary at the end of scanning.
+\fB\-\-no\-summary\fR
+Do not display summary at the end of scanning.
 .SH "EXAMPLES"
 .LP 
 .TP 
