@@ -50,7 +50,7 @@ Scan directories recursively. All the subdirectories in the given directory will
 Sound bell on virus detection.
 .TP 
 \fB\-\-no\-summary\fR
-Disable summary printing at the end of scanning.
+Do not display summary at the end of scanning.
 .TP 
 \fB\-\-exclude=PATT\fR
 Don't scan file names containing PATT. It may be used multiple times.
