@@ -49,6 +49,9 @@ Unpack a selected CVD file to a current directory.
 .TP 
 \fB\-\-unpack\-current\fR
 Unpack a local CVD file to a current directory.
+.TP 
+\fB\-l, \-\-list\-sigs\fR
+List signature names.
 .SH "EXAMPLES"
 .LP 
 .TP 
