@@ -103,6 +103,10 @@ FixStaleSocket
 # Default: 120
 #ReadTimeout 300
 
+# Waiting for a new job will timeout after this time (seconds).
+# Default: 30
+#IdleTimeout 60
+
 # Maximal depth directories are scanned at.
 # Default: 15
 #MaxDirectoryRecursion 20
